--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-body, html {
+body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: #FDFDFD,
+  font-family: 'Roboto', sans-serif;
+  background-color: #FDFDFD;
+  font-size: 14px,
 }
